# 6_1_pho_projets

./: README.md
projet_1/: CMakeLists.txt  Makefile  README.md  lokk.txt  papi  philosopher_problem  philosopher_problem.CSV  philosopher_problem.c  philosopher_problem.py  philosopher_shell.sh  producer_consumer  producer_consumer.c  producer_consumer_shell.sh  test  writer_reader  writer_reader.CSV  writer_reader.c  writer_reader_shell.sh
projet_1/data/: philosopher_problem.CSV  posix.CSV  test_set.CSV  test_test_set.CSV  writer_reader.CSV
projet_1/data_complete/: philosopher_problem.CSV  philosopher_problem_mod.CSV  posix.CSV  producer_consumer.CSV  producer_consumer_2.CSV  producer_consumer_3.CSV  producer_consumer_4.CSV  producer_consumer_5.CSV  producer_consumer_mod.CSV  producer_consumer_mod_2.CSV  producer_consumer_mod_3.CSV  producer_consumer_mod_4.CSV  producer_consumer_mod_5.CSV  test_set.CSV  test_test_set.CSV  writer_reader.CSV  writer_reader_2.CSV  writer_reader_3.CSV  writer_reader_4.CSV  writer_reader_5.CSV  writer_reader_mod.CSV  writer_reader_mod_2.CSV  writer_reader_mod_3.CSV  writer_reader_mod_4.CSV  writer_reader_mod_5.CSV
projet_1/executable/: philosopher_problem  philosopher_problem_mod  posix  producer_consumer  producer_consumer_mod  test_set  test_test_set  test_test_set_performance  writer_reader  writer_reader_mod
projet_1/python_files/: philosopher_problem.py  producer_consumer.py  test.py  writer_reader.py
projet_1/shell/: philosopher_shell.sh  producer_consumer_shell.sh  test_shell.sh  writer_reader_shell.sh
projet_2/: archive.tar  (+5 more)
(+24 files in other folders)
